--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "rimraf dist && cross-env NODE_ENV=production tsc",
     "serve": "cross-env NODE_ENV=production node dist/lib/index.js",
     "start": "cross-env NODE_ENV=development ts-node src/index.ts",
-    "lint": "eslint src/**/*.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/**/*.ts test/**/*.ts",
+    "test": "rimraf coverage && jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,14 +19,17 @@
     "cross-env": "^7.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.21",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
     "eslint-config-alloy": "^3.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
