--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "rimraf dist && cross-env NODE_ENV=production tsc",
     "serve": "cross-env NODE_ENV=production node dist/index.js",
     "lint": "eslint src/**/*.ts",
+    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +25,7 @@
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
     "eslint-config-alloy": "^4.7.0",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
