--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "cross-env NODE_ENV=development ts-node src/index.ts",
     "build": "rimraf dist && cross-env NODE_ENV=production tsc",
     "serve": "cross-env NODE_ENV=production node dist/index.js",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/**/*.ts test/**/*.ts",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "rimraf coverage && jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -20,13 +20,16 @@
     "cross-env": "^7.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.0",
     "@types/node": "^18.11.5",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
     "eslint-config-alloy": "^4.7.0",
+    "jest": "^29.2.2",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
