--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "serve": "cross-env NODE_ENV=production node dist/index.js",
     "lint": "eslint src/**/*.ts test/**/*.ts",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "rimraf coverage && jest --coverage"
+    "test": "rimraf coverage && jest --coverage",
+    "pack:development": "cross-env NODE_ENV=development rollup -c rollup.config.js",
+    "pack:production": "cross-env NODE_ENV=production rollup -c rollup.config.js",
+    "pack": "rimraf dist && npm run pack:development && npm run pack:production"
   },
   "repository": {
     "type": "git",
@@ -29,6 +32,9 @@
     "jest": "^29.2.2",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "rollup": "^2.79.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
