--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "rimraf dist && cross-env NODE_ENV=production tsc",
     "serve": "cross-env NODE_ENV=production node dist/index.js",
     "lint": "eslint src/**/*.ts --fix",
+    "format": "prettier -c -w \"./**/*\" --ignore-path .gitignore",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +25,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.47.0",
     "eslint-config-alloy": "^5.1.1",
+    "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
