--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "cross-env NODE_ENV=development ts-node src/index.ts",
     "build": "rimraf dist && cross-env NODE_ENV=production tsc",
     "serve": "cross-env NODE_ENV=production node dist/index.js",
-    "lint": "eslint src/**/*.ts --fix",
+    "lint": "eslint src/**/*.ts test/**/*.ts --fix",
     "format": "prettier -c -w \"./**/*\" --ignore-path .gitignore",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "rimraf coverage && jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -20,13 +20,16 @@
     "cross-env": "^7.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.47.0",
     "eslint-config-alloy": "^5.1.1",
+    "jest": "^29.6.2",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
