--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "serve": "cross-env NODE_ENV=production node dist/index.js",
     "lint": "eslint src/**/*.ts test/**/*.ts --fix",
     "format": "prettier -c -w \"./**/*\" --ignore-path .gitignore",
-    "test": "rimraf coverage && jest --coverage"
+    "test": "rimraf coverage && jest --coverage",
+    "pack:development": "cross-env NODE_ENV=development rollup -c rollup.config.js --bundleConfigAsCjs",
+    "pack:production": "cross-env NODE_ENV=production rollup -c rollup.config.js --bundleConfigAsCjs",
+    "pack": "rimraf dist && npm run pack:development && npm run pack:production"
   },
   "repository": {
     "type": "git",
@@ -20,6 +23,8 @@
     "cross-env": "^7.0.3"
   },
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.2",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -29,6 +34,7 @@
     "jest": "^29.6.2",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
+    "rollup": "^3.28.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
