--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
     "serve": "cross-env NODE_ENV=production node dist/index.js",
     "lint": "eslint \"**/*.{js,ts}\" --fix",
     "format": "prettier -c -w \"**/*\" --ignore-path .gitignore",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "rimraf coverage && jest --coverage"
   },
   "license": "MIT",
   "dependencies": {
     "cross-env": "^7.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.4",
     "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.48.0",
     "eslint-config-alloy": "^5.1.2",
+    "jest": "^29.6.4",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
