--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "serve": "cross-env NODE_ENV=production node dist/index.js",
     "lint": "eslint \"**/*.{js,ts}\" --fix",
     "format": "prettier -c -w \"**/*\" --ignore-path .gitignore",
-    "test": "rimraf coverage && jest --coverage"
+    "test": "rimraf coverage && jest --coverage",
+    "pack:development": "cross-env NODE_ENV=development rollup -c rollup.config.js --bundleConfigAsCjs",
+    "pack:production": "cross-env NODE_ENV=production rollup -c rollup.config.js --bundleConfigAsCjs",
+    "pack": "rimraf dist && npm run pack:development && npm run pack:production"
   },
   "license": "MIT",
   "dependencies": {
     "cross-env": "^7.0.3"
   },
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.9",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
@@ -25,8 +30,10 @@
     "jest": "^29.6.4",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
+    "rollup": "^3.29.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   }
 }
