--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "cross-env NODE_ENV=development ts-node src/index.ts",
     "build": "rimraf dist && cross-env NODE_ENV=production tsc",
     "serve": "cross-env NODE_ENV=production node dist/index.js",
+    "lint": "eslint \"**/*.{js,ts}\" --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
@@ -15,6 +16,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "eslint": "^8.48.0",
+    "eslint-config-alloy": "^5.1.2",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
